docs/Railwayerrorlog110825-7:30
1You reached the start of the range
Nov 8, 2025 at 7:19 AM
Starting Container
[2025-11-08 12:27:19 +0000] [2] [INFO] Starting gunicorn 21.2.0
[2025-11-08 12:27:19 +0000] [2] [INFO] Listening at: http://0.0.0.0:8080 (2)
[2025-11-08 12:27:19 +0000] [2] [INFO] Using worker: uvicorn.workers.UvicornWorker
[2025-11-08 12:27:19 +0000] [3] [INFO] Booting worker with pid: 3
[2025-11-08 12:27:19 +0000] [4] [INFO] Booting worker with pid: 4
[2025-11-08 12:27:19 +0000] [5] [INFO] Booting worker with pid: 5
[2025-11-08 12:27:19 +0000] [6] [INFO] Booting worker with pid: 6
/usr/local/lib/python3.10/site-packages/pydantic/_internal/_fields.py:132: UserWarning: Field "model_dtype" in Settings has conflict with protected namespace "model_".
You may be able to resolve this warning by setting `model_config['protected_namespaces'] = ('settings_',)`.
  warnings.warn(
/usr/local/lib/python3.10/site-packages/pydantic/_internal/_fields.py:132: UserWarning: Field "model_dtype" in Settings has conflict with protected namespace "model_".
You may be able to resolve this warning by setting `model_config['protected_namespaces'] = ('settings_',)`.
  warnings.warn(
/usr/local/lib/python3.10/site-packages/pydantic/_internal/_fields.py:132: UserWarning: Field "model_dtype" in Settings has conflict with protected namespace "model_".
You may be able to resolve this warning by setting `model_config['protected_namespaces'] = ('settings_',)`.
  warnings.warn(
/usr/local/lib/python3.10/site-packages/pydantic/_internal/_fields.py:132: UserWarning: Field "model_dtype" in Settings has conflict with protected namespace "model_".
You may be able to resolve this warning by setting `model_config['protected_namespaces'] = ('settings_',)`.
  warnings.warn(
  File "/usr/local/lib/python3.10/site-packages/gunicorn/arbiter.py", line 609, in spawn_worker
  File "/usr/local/lib/python3.10/importlib/__init__.py", line 126, in import_module
    worker.init_process()
    return _bootstrap._gcd_import(name[level:], package, level)
  File "/usr/local/lib/python3.10/site-packages/uvicorn/workers.py", line 75, in init_process
    super().init_process()
    self.wsgi = self.app.wsgi()
  File "/usr/local/lib/python3.10/site-packages/gunicorn/workers/base.py", line 134, in init_process
  File "/usr/local/lib/python3.10/site-packages/gunicorn/app/base.py", line 67, in wsgi
    self.load_wsgi()
    self.callable = self.load()
    return self.load_wsgiapp()
  File "/usr/local/lib/python3.10/site-packages/gunicorn/workers/base.py", line 146, in load_wsgi
  File "/usr/local/lib/python3.10/site-packages/gunicorn/app/wsgiapp.py", line 58, in load
  File "/usr/local/lib/python3.10/site-packages/gunicorn/app/wsgiapp.py", line 48, in load_wsgiapp
    return util.import_app(self.app_uri)
  File "/usr/local/lib/python3.10/site-packages/gunicorn/util.py", line 371, in import_app
    mod = importlib.import_module(module)
[2025-11-08 12:27:21 +0000] [5] [ERROR] Exception in worker process
Traceback (most recent call last):
    self.wsgi = self.app.wsgi()
  File "/usr/local/lib/python3.10/site-packages/gunicorn/app/base.py", line 67, in wsgi
    self.callable = self.load()
  File "<frozen importlib._bootstrap>", line 1050, in _gcd_import
    return util.import_app(self.app_uri)
  File "<frozen importlib._bootstrap>", line 1027, in _find_and_load
  File "<frozen importlib._bootstrap>", line 992, in _find_and_load_unlocked
  File "/usr/local/lib/python3.10/site-packages/gunicorn/util.py", line 371, in import_app
  File "/usr/local/lib/python3.10/site-packages/gunicorn/arbiter.py", line 609, in spawn_worker
  File "/app/src/api/main.py", line 13, in <module>
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "<frozen importlib._bootstrap>", line 1027, in _find_and_load
    worker.init_process()
    mod = importlib.import_module(module)
    from src.api.routers import (
  File "<frozen importlib._bootstrap>", line 1050, in _gcd_import
  File "/usr/local/lib/python3.10/importlib/__init__.py", line 126, in import_module
    super().init_process()
  File "<frozen importlib._bootstrap>", line 1027, in _find_and_load
  File "/app/src/api/routers/api_keys.py", line 243
  File "/usr/local/lib/python3.10/site-packages/uvicorn/workers.py", line 75, in init_process
  File "/usr/local/lib/python3.10/site-packages/gunicorn/app/wsgiapp.py", line 58, in load
  File "/usr/local/lib/python3.10/site-packages/gunicorn/workers/base.py", line 134, in init_process
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 1006, in _find_and_load_unlocked
    current_user: Annotated[User, Depends(get_current_user)],
    self.load_wsgi()
  File "<frozen importlib._bootstrap>", line 688, in _load_unlocked
    return self.load_wsgiapp()
  File "<frozen importlib._bootstrap>", line 1050, in _gcd_import
    super().init_process()
  File "/usr/local/lib/python3.10/site-packages/gunicorn/workers/base.py", line 146, in load_wsgi
  File "<frozen importlib._bootstrap_external>", line 883, in exec_module
  File "/usr/local/lib/python3.10/site-packages/gunicorn/workers/base.py", line 134, in init_process
  File "/usr/local/lib/python3.10/site-packages/gunicorn/app/wsgiapp.py", line 48, in load_wsgiapp
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "<frozen importlib._bootstrap_external>", line 883, in exec_module
  File "<frozen importlib._bootstrap>", line 992, in _find_and_load_unlocked
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/app/src/api/__init__.py", line 3, in <module>
  File "<frozen importlib._bootstrap>", line 1006, in _find_and_load_unlocked
    self.load_wsgi()
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "<frozen importlib._bootstrap>", line 1027, in _find_and_load
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "<frozen importlib._bootstrap_external>", line 883, in exec_module
SyntaxError: non-default argument follows default argument
    from src.api.main import app
  File "<frozen importlib._bootstrap>", line 688, in _load_unlocked
  File "/app/src/api/__init__.py", line 3, in <module>
  File "/usr/local/lib/python3.10/site-packages/gunicorn/workers/base.py", line 146, in load_wsgi
  File "<frozen importlib._bootstrap>", line 1050, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1006, in _find_and_load_unlocked
[2025-11-08 12:27:21 +0000] [4] [INFO] Worker exiting (pid: 4)
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/app/src/api/main.py", line 13, in <module>
    from src.api.main import app
    self.wsgi = self.app.wsgi()
  File "<frozen importlib._bootstrap>", line 688, in _load_unlocked
[2025-11-08 12:27:21 +0000] [6] [ERROR] Exception in worker process
    from src.api.routers import (
  File "/app/src/api/routers/api_keys.py", line 243
SyntaxError: non-default argument follows default argument
  File "/usr/local/lib/python3.10/site-packages/gunicorn/arbiter.py", line 609, in spawn_worker
  File "/app/src/api/routers/api_keys.py", line 243
  File "/usr/local/lib/python3.10/site-packages/gunicorn/app/base.py", line 67, in wsgi
Traceback (most recent call last):
  File "/app/src/api/__init__.py", line 3, in <module>
    current_user: Annotated[User, Depends(get_current_user)],
[2025-11-08 12:27:21 +0000] [6] [INFO] Worker exiting (pid: 6)
    worker.init_process()
